--- a/Wox/resource/lang/zh_CN.json
+++ b/Wox/resource/lang/zh_CN.json
@@ -10,5 +10,6 @@
   "plugin_sys_empty_trash": "清空回收站",
   "plugin_sys_lock_computer": "锁定电脑",
   "plugin_sys_execute": "执行",
-  "plugin_sys_quit_wox": "退出Wox"
+  "plugin_sys_quit_wox": "退出Wox",
+  "plugin_sys_open_wox_preferences": "打开Wox设置"
 }
