--- a/Wox/resource/lang/en_US.json
+++ b/Wox/resource/lang/en_US.json
@@ -6,6 +6,8 @@
   "plugin_browser_bookmark_open_in_browser": "Open in browser",
   "plugin_clipboard_copy_date": "Copy date",
   "plugin_clipboard_copy_characters": "Copy characters",
+  "plugin_clipboard_image_width": "Image width",
+  "plugin_clipboard_image_height": "Image height",
   "plugin_indicator_activate_plugin": "Activate %s plugin",
   "plugin_sys_empty_trash": "Empty Trash",
   "plugin_sys_lock_computer": "Lock PC",
