--- a/Wox/resource/lang/en_US.json
+++ b/Wox/resource/lang/en_US.json
@@ -8,6 +8,12 @@
   "plugin_clipboard_copy_characters": "Copy characters",
   "plugin_clipboard_image_width": "Image width",
   "plugin_clipboard_image_height": "Image height",
+  "plugin_clipboard_keep_text_history": "Keep text history for",
+  "plugin_clipboard_days": "days",
+  "plugin_clipboard_keep_image_history": "Keep image history for",
+  "plugin_clipboard_primary_action": "Primary action",
+  "plugin_clipboard_primary_action_copy_to_clipboard": "Copy to clipboard",
+  "plugin_clipboard_primary_action_paste_to_active_app": "Paste to active app",
   "plugin_indicator_activate_plugin": "Activate %s plugin",
   "plugin_sys_empty_trash": "Empty Trash",
   "plugin_sys_lock_computer": "Lock PC",
