--- a/Wox/resource/lang/zh_CN.json
+++ b/Wox/resource/lang/zh_CN.json
@@ -8,6 +8,12 @@
   "plugin_clipboard_copy_characters": "复制字符",
   "plugin_clipboard_image_width": "图片宽度",
   "plugin_clipboard_image_height": "图片高度",
+  "plugin_clipboard_keep_text_history": "保留文本历史记录",
+  "plugin_clipboard_days": "天",
+  "plugin_clipboard_keep_image_history": "保留图片历史记录",
+  "plugin_clipboard_primary_action": "主要操作",
+  "plugin_clipboard_primary_action_copy_to_clipboard": "复制到剪贴板",
+  "plugin_clipboard_primary_action_paste_to_active_app": "粘贴到活动应用程序",
   "plugin_indicator_activate_plugin": "激活%s插件",
   "plugin_sys_empty_trash": "清空回收站",
   "plugin_sys_lock_computer": "锁定电脑",
