--- a/Wox/resource/lang/zh_CN.json
+++ b/Wox/resource/lang/zh_CN.json
@@ -19,5 +19,10 @@
   "plugin_sys_lock_computer": "锁定电脑",
   "plugin_sys_execute": "执行",
   "plugin_sys_quit_wox": "退出Wox",
-  "plugin_sys_open_wox_preferences": "打开Wox设置"
+  "plugin_sys_open_wox_preferences": "打开Wox设置",
+  "plugin_websearch_trigger_keyword": "关键字",
+  "plugin_websearch_title": "标题",
+  "plugin_websearch_url": "网址",
+  "plugin_websearch_enabled": "启用",
+  "plugin_websearch_icon": "图标"
 }
