--- a/Wox/resource/lang/en_US.json
+++ b/Wox/resource/lang/en_US.json
@@ -20,6 +20,7 @@
   "plugin_sys_execute": "Execute",
   "plugin_sys_quit_wox": "Exit",
   "plugin_sys_open_wox_preferences": "Open Wox Preferences",
+  "plugin_sys_open_wox_settings": "Open Wox Settings",
   "plugin_websearch_trigger_keyword": "Trigger keyword",
   "plugin_websearch_title": "Title",
   "plugin_websearch_url": "URL",
