--- a/Wox/resource/lang/zh_CN.json
+++ b/Wox/resource/lang/zh_CN.json
@@ -23,10 +23,14 @@
   "plugin_sys_open_wox_settings": "打开Wox设置",
   "plugin_sys_open_system_settings": "打开系统设置",
   "plugin_websearch_trigger_keyword": "关键字",
-  "plugin_websearch_trigger_keyword_tooltip": "输入关键字触发网页搜索",
+  "plugin_websearch_trigger_keyword_tooltip": "输入触发关键字触发该网页搜索",
   "plugin_websearch_title": "标题",
+  "plugin_websearch_title_tooltip": "显示在搜索结果中的标题, 使用{query}代表用户实际输入的内容",
   "plugin_websearch_urls": "网址",
+  "plugin_websearch_urls_tooltip": "需要打开的网址列表, 支持打开多个网址. 使用{query}代表用户实际输入的内容, {lower_query}代表用户实际输入的内容的小写形式, {upper_query}代表用户实际输入的内容的大写形式",
   "plugin_websearch_enabled": "启用",
+  "plugin_websearch_is_fallback": "回退搜索",
+  "plugin_websearch_is_fallback_tooltip": "当没有搜索结果匹配当前的查询时, 使用该条网页搜索作为回退搜索",
   "plugin_websearch_icon": "图标",
   "plugin_websearch_web_searches": "网页搜索"
 }
