Add process termination feature to app plugin

--- a/Wox/resource/lang/en_US.json
+++ b/Wox/resource/lang/en_US.json
@@ -3,6 +3,7 @@
   "plugin_app_open": "Open",
   "plugin_app_open_containing_folder": "Open Containing Folder",
   "plugin_app_copy_path": "Copy Path",
+  "plugin_app_terminate": "Terminate",
   "plugin_browser_bookmark_open_in_browser": "Open in browser",
   "plugin_clipboard_copy_date": "Copy date",
   "plugin_clipboard_copy_characters": "Copy characters",
