--- a/Wox/resource/lang/en_US.json
+++ b/Wox/resource/lang/en_US.json
@@ -33,5 +33,24 @@
   "plugin_websearch_is_fallback": "Fallback",
   "plugin_websearch_is_fallback_tooltip": "If enabled, this search will be used if no other search matches the query",
   "plugin_websearch_icon": "Icon",
-  "plugin_websearch_web_searches": "Web Searches"
+  "plugin_websearch_web_searches": "Web Searches",
+  "ui_hotkey": "Hotkey",
+  "ui_hotkey_tips": "Hotkeys to open or hide Wox",
+  "ui_selection_hotkey": "Selection Hotkey",
+  "ui_selection_hotkey_tips": "Hotkeys to do actions on selected text or files",
+  "ui_use_pinyin": "Use Pinyin",
+  "ui_use_pinyin_tips": "When selected, Wox will convert Chinese into Pinyin",
+  "ui_hide_on_lost_focus": "Hide on lost focus",
+  "ui_hide_on_lost_focus_tips": "When selected, Wox will hide when it loses focus",
+  "ui_hide_on_start": "Hide on start",
+  "ui_hide_on_start_tips": "When selected, Wox will hide when it starts",
+  "ui_show_tray": "Show tray icon",
+  "ui_show_tray_tips": "When selected, Wox will show a tray icon",
+  "ui_switch_input_method_abc": "Switch to ABC",
+  "ui_switch_input_method_abc_tips": "When selected, the input method will be switched to english",
+  "ui_lang": "Language",
+  "ui_query_hotkeys": "Query Hotkeys",
+  "ui_query_shortcuts": "Query Shortcuts",
+  "ui_general": "General",
+  "ui_ai": "AI"
 }
