--- a/Wox/resource/lang/zh_CN.json
+++ b/Wox/resource/lang/zh_CN.json
@@ -33,5 +33,24 @@
   "plugin_websearch_is_fallback": "回退搜索",
   "plugin_websearch_is_fallback_tooltip": "当没有搜索结果匹配当前的查询时, 使用该条网页搜索作为回退搜索",
   "plugin_websearch_icon": "图标",
-  "plugin_websearch_web_searches": "网页搜索"
+  "plugin_websearch_web_searches": "网页搜索",
+  "ui_hotkey": "快捷键",
+  "ui_hotkey_tips": "用于显示或隐藏Wox的快捷键",
+  "ui_selection_hotkey": "选择快捷键",
+  "ui_selection_hotkey_tips": "用于在选定的文本或文件上执行操作的快捷键",
+  "ui_use_pinyin": "使用拼音",
+  "ui_use_pinyin_tips": "搜索时，把中文转换为拼音",
+  "ui_hide_on_lost_focus": "失去焦点时隐藏",
+  "ui_hide_on_lost_focus_tips": "选中后，Wox失去焦点时将隐藏",
+  "ui_hide_on_start": "启动时隐藏",
+  "ui_hide_on_start_tips": "选中后，Wox启动时将隐藏",
+  "ui_show_tray": "显示托盘图标",
+  "ui_show_tray_tips": "选中后，Wox将显示托盘图标",
+  "ui_switch_input_method_abc": "切换输入法",
+  "ui_switch_input_method_abc_tips": "选中后，输入法将切换到英文",
+  "ui_lang": "语言",
+  "ui_query_hotkeys": "查询快捷键",
+  "ui_query_shortcuts": "查询缩写",
+  "ui_general": "通用",
+  "ui_ai": "AI"
 }
