Optimize toolbar and result view components
Added toolbar tips using reactive variable and optimized redundant code in result view. Improved toolbar aesthetics with shadow support and made minor refactoring.

--- a/Wox/resource/lang/en_US.json
+++ b/Wox/resource/lang/en_US.json
@@ -15,7 +15,8 @@
   "plugin_clipboard_primary_action": "Primary action",
   "plugin_clipboard_primary_action_copy_to_clipboard": "Copy to clipboard",
   "plugin_clipboard_primary_action_paste_to_active_app": "Paste to active app",
-  "plugin_indicator_activate_plugin": "Activate %s plugin",
+  "plugin_indicator_activate": "Activate",
+  "plugin_indicator_activate_plugin": "Activate the %s plugin",
   "plugin_sys_empty_trash": "Empty Trash",
   "plugin_sys_lock_computer": "Lock PC",
   "plugin_sys_execute": "Execute",
