Remove toolbar box shadow and enhance file list preview.
Deleted the box shadow from the toolbar to simplify the UI. Refactored the plugin manager to format file list previews, added new translation strings for file selection messages in English and Chinese.

--- a/Wox/resource/lang/en_US.json
+++ b/Wox/resource/lang/en_US.json
@@ -53,5 +53,8 @@
   "ui_query_hotkeys": "Query Hotkeys",
   "ui_query_shortcuts": "Query Shortcuts",
   "ui_general": "General",
-  "ui_ai": "AI"
+  "ui_ai": "AI",
+  "selection_no_files_selected": "No files selected",
+  "selection_selected_files_count": "Selected %d files:",
+  "selection_remaining_files_not_shown": "... %d more files not shown"
 }
