Improve i18n for system plugins

--- a/Wox/resource/lang/en_US.json
+++ b/Wox/resource/lang/en_US.json
@@ -1,5 +1,29 @@
 {
   "show_wox_preferences": "Show Wox Preferences",
+  "selection_no_files_selected": "No files selected",
+  "selection_selected_files_count": "Selected %d files:",
+  "selection_remaining_files_not_shown": "... %d more files not shown",
+  "ui_hotkey": "Hotkey",
+  "ui_hotkey_tips": "Hotkeys to open or hide Wox",
+  "ui_selection_hotkey": "Selection Hotkey",
+  "ui_selection_hotkey_tips": "Hotkeys to do actions on selected text or files",
+  "ui_use_pinyin": "Use Pinyin",
+  "ui_use_pinyin_tips": "When selected, Wox will convert Chinese into Pinyin",
+  "ui_hide_on_lost_focus": "Hide on lost focus",
+  "ui_hide_on_lost_focus_tips": "When selected, Wox will hide when it loses focus",
+  "ui_hide_on_start": "Hide on start",
+  "ui_hide_on_start_tips": "When selected, Wox will hide when it starts",
+  "ui_show_tray": "Show tray icon",
+  "ui_show_tray_tips": "When selected, Wox will show a tray icon",
+  "ui_switch_input_method_abc": "Switch to ABC",
+  "ui_switch_input_method_abc_tips": "When selected, the input method will be switched to english",
+  "ui_lang": "Language",
+  "ui_query_hotkeys": "Query Hotkeys",
+  "ui_query_shortcuts": "Query Shortcuts",
+  "ui_general": "General",
+  "ui_ai": "AI",
+  "ui_autostart": "Autostart",
+  "ui_autostart_tips": "When selected, Wox will start automatically when the computer starts",
   "plugin_app_open": "Open",
   "plugin_app_open_containing_folder": "Open Containing Folder",
   "plugin_app_copy_path": "Copy Path",
@@ -23,6 +47,9 @@
   "plugin_sys_quit_wox": "Exit",
   "plugin_sys_open_wox_settings": "Open Wox Settings",
   "plugin_sys_open_system_settings": "Open System Settings",
+  "plugin_sys_performance_cpu_profiling": "Performance CPU profiling",
+  "plugin_sys_delete_image_cache": "Delete all image cache",
+  "plugin_sys_open_plugin_settings": "Open %s settings",
   "plugin_websearch_trigger_keyword": "keyword",
   "plugin_websearch_trigger_keyword_tooltip": "The trigger keyword you want to use to trigger the search",
   "plugin_websearch_title": "Title",
@@ -34,28 +61,81 @@
   "plugin_websearch_is_fallback_tooltip": "If enabled, this search will be used if no other search matches the query",
   "plugin_websearch_icon": "Icon",
   "plugin_websearch_web_searches": "Web Searches",
-  "ui_hotkey": "Hotkey",
-  "ui_hotkey_tips": "Hotkeys to open or hide Wox",
-  "ui_selection_hotkey": "Selection Hotkey",
-  "ui_selection_hotkey_tips": "Hotkeys to do actions on selected text or files",
-  "ui_use_pinyin": "Use Pinyin",
-  "ui_use_pinyin_tips": "When selected, Wox will convert Chinese into Pinyin",
-  "ui_hide_on_lost_focus": "Hide on lost focus",
-  "ui_hide_on_lost_focus_tips": "When selected, Wox will hide when it loses focus",
-  "ui_hide_on_start": "Hide on start",
-  "ui_hide_on_start_tips": "When selected, Wox will hide when it starts",
-  "ui_show_tray": "Show tray icon",
-  "ui_show_tray_tips": "When selected, Wox will show a tray icon",
-  "ui_switch_input_method_abc": "Switch to ABC",
-  "ui_switch_input_method_abc_tips": "When selected, the input method will be switched to english",
-  "ui_lang": "Language",
-  "ui_query_hotkeys": "Query Hotkeys",
-  "ui_query_shortcuts": "Query Shortcuts",
-  "ui_general": "General",
-  "ui_ai": "AI",
-  "ui_autostart": "Autostart",
-  "ui_autostart_tips": "When selected, Wox will start automatically when the computer starts",
-  "selection_no_files_selected": "No files selected",
-  "selection_selected_files_count": "Selected %d files:",
-  "selection_remaining_files_not_shown": "... %d more files not shown"
+  "plugin_url_open": "Open",
+  "plugin_url_remove": "Remove from url history",
+  "plugin_url_open_in_browser": "Open in browser",
+  "plugin_doctor_version": "Version",
+  "plugin_doctor_version_latest": "Already using the latest version: %s",
+  "plugin_doctor_version_update_available": "New version available, current: %s, latest: %s",
+  "plugin_doctor_version_download": "Go to download page",
+  "plugin_doctor_accessibility": "Accessibility",
+  "plugin_doctor_accessibility_required": "You need to grant Wox Accessibility permission to use this plugin",
+  "plugin_doctor_accessibility_open_settings": "Open Accessibility Settings",
+  "plugin_doctor_accessibility_granted": "You have granted Wox Accessibility permission",
+  "plugin_query_history_use": "Use",
+  "plugin_browser_open_tab": "Open",
+  "plugin_browser_server_port": "Server Port",
+  "plugin_browser_server_port_tooltip": "The port for the websocket server to communicate with the browser extension. Default is 34988.",
+  "plugin_browser_server_start_error": "Failed to start websocket server: %s",
+  "plugin_menus_execute": "Execute",
+  "plugin_wpm_please_wait": "Please wait...",
+  "plugin_wpm_create_plugin": "Create %s plugin",
+  "plugin_wpm_plugin_name": "Name: %s",
+  "plugin_wpm_create": "Create",
+  "plugin_wpm_uninstall": "Uninstall",
+  "plugin_wpm_install": "Install",
+  "plugin_wpm_install_failed": "Failed to install plugin",
+  "plugin_wpm_reload": "Reload",
+  "plugin_wpm_open_directory": "Open plugin directory",
+  "plugin_wpm_open_directory_failed": "Failed to open plugin directory: %s",
+  "plugin_wpm_remove": "Remove",
+  "plugin_wpm_remove_and_delete": "Remove and delete plugin directory",
+  "plugin_wpm_reload_all_plugins": "Reload all dev plugins",
+  "plugin_wpm_choose_directory": "You need to choose a directory to add local plugin",
+  "plugin_wpm_directory_already_added": "The plugin directory has already been added",
+  "plugin_wpm_input_directory": "You need to input a directory to remove local plugin",
+  "plugin_wpm_directory_not_found": "The plugin directory is not found",
+  "plugin_wpm_reload_success": "Reloaded dev plugin %s(%s)",
+  "plugin_wpm_downloading_template": "Downloading template...",
+  "plugin_wpm_create_temp_dir_failed": "Failed to create temp plugin directory: %s",
+  "plugin_wpm_downloading_template_to": "Downloading %s template to %s",
+  "plugin_wpm_download_template_failed": "Failed to download template: %s",
+  "plugin_wpm_extracting_template": "Extracting template...",
+  "plugin_wpm_extract_template_failed": "Failed to extract template: %s",
+  "plugin_wpm_choose_directory_prompt": "Please choose a directory...",
+  "plugin_wpm_command_install": "Install Wox plugins",
+  "plugin_wpm_command_uninstall": "Uninstall Wox plugins",
+  "plugin_wpm_command_create": "Create Wox plugin",
+  "plugin_wpm_command_dev_list": "List local Wox plugins",
+  "plugin_wpm_command_dev_add": "Add existing Wox plugin directory",
+  "plugin_wpm_command_dev_remove": "Remove local Wox plugin, followed by a directory",
+  "plugin_wpm_command_dev_reload": "Reload all dev plugins",
+  "plugin_wpm_local_plugin_directories": "Local Plugin Directories",
+  "plugin_wpm_local_plugin_directories_tooltip": "The directories to load local plugins, useful for plugin development",
+  "plugin_wpm_path": "Path",
+  "plugin_ai_command_description": "Make your daily tasks easier with AI commands",
+  "plugin_ai_command_commands": "Commands",
+  "plugin_ai_command_commands_tooltip": "The commands to run.\r\nE.g. `translate`, user will type `ai translate` to run translate based on the prompt",
+  "plugin_ai_command_enter_to_start": "Enter to start chat",
+  "plugin_ai_command_run": "Run",
+  "plugin_ai_command_answering": "Answering...",
+  "plugin_ai_command_answered_cost": "Answered, cost %d ms",
+  "plugin_ai_command_copy": "Copy",
+  "plugin_ai_command_no_commands": "No AI commands found",
+  "plugin_ai_command_type_to_start": "Type to start chat",
+  "plugin_ai_command_not_found": "No AI command found",
+  "plugin_ai_command_empty_prompt": "Prompt is empty for this AI command",
+  "plugin_ai_command_chat_with": "Chat with %s",
+  "plugin_backup_now": "Backup now",
+  "plugin_backup_subtitle": "Backup Wox settings",
+  "plugin_backup_action": "Backup",
+  "plugin_backup_success": "Wox settings backed up",
+  "plugin_backup_error": "Error",
+  "plugin_backup_restore": "Restore",
+  "plugin_backup_restore_success": "Wox settings restored",
+  "plugin_calculator_copy_result": "Copy result",
+  "plugin_calculator_recalculate": "Recalculate",
+  "plugin_calculator_input_expression": "Input expression to calculate",
+  "plugin_file_open": "Open",
+  "plugin_file_open_containing_folder": "Open containing folder"
 }
