--- a/Wox/resource/lang/zh_CN.json
+++ b/Wox/resource/lang/zh_CN.json
@@ -1,5 +1,29 @@
 {
   "show_wox_preferences": "显示 Wox 设置",
+  "selection_no_files_selected": "未选择文件",
+  "selection_selected_files_count": "已选择 %d 个文件：",
+  "selection_remaining_files_not_shown": "... 还有 %d 个文件未显示",
+  "ui_hotkey": "快捷键",
+  "ui_hotkey_tips": "用于显示或隐藏Wox的快捷键",
+  "ui_selection_hotkey": "选择快捷键",
+  "ui_selection_hotkey_tips": "用于在选定的文本或文件上执行操作的快捷键",
+  "ui_use_pinyin": "使用拼音",
+  "ui_use_pinyin_tips": "搜索时，把中文转换为拼音",
+  "ui_hide_on_lost_focus": "失去焦点时隐藏",
+  "ui_hide_on_lost_focus_tips": "选中后，Wox失去焦点时将隐藏",
+  "ui_hide_on_start": "启动时隐藏",
+  "ui_hide_on_start_tips": "选中后，Wox启动时将隐藏",
+  "ui_show_tray": "显示托盘图标",
+  "ui_show_tray_tips": "选中后，Wox将显示托盘图标",
+  "ui_switch_input_method_abc": "切换输入法",
+  "ui_switch_input_method_abc_tips": "选中后，输入法将切换到英文",
+  "ui_lang": "语言",
+  "ui_query_hotkeys": "查询快捷",
+  "ui_query_shortcuts": "查询缩写",
+  "ui_general": "通用",
+  "ui_ai": "AI",
+  "ui_autostart": "开机自启动",
+  "ui_autostart_tips": "选中后，Wox将在电脑开机时自动启动",
   "plugin_app_open": "打开",
   "plugin_app_open_containing_folder": "打开所在文件夹",
   "plugin_app_copy_path": "复制路径",
@@ -23,6 +47,9 @@
   "plugin_sys_quit_wox": "退出Wox",
   "plugin_sys_open_wox_settings": "打开Wox设置",
   "plugin_sys_open_system_settings": "打开系统设置",
+  "plugin_sys_performance_cpu_profiling": "性能 CPU 分析",
+  "plugin_sys_delete_image_cache": "删除所有图片缓存",
+  "plugin_sys_open_plugin_settings": "打开 %s 设置",
   "plugin_websearch_trigger_keyword": "关键字",
   "plugin_websearch_trigger_keyword_tooltip": "输入触发关键字触发该网页搜索",
   "plugin_websearch_title": "标题",
@@ -34,28 +61,81 @@
   "plugin_websearch_is_fallback_tooltip": "当没有搜索结果匹配当前的查询时, 使用该条网页搜索作为回退搜索",
   "plugin_websearch_icon": "图标",
   "plugin_websearch_web_searches": "网页搜索",
-  "ui_hotkey": "快捷键",
-  "ui_hotkey_tips": "用于显示或隐藏Wox的快捷键",
-  "ui_selection_hotkey": "选择快捷键",
-  "ui_selection_hotkey_tips": "用于在选定的文本或文件上执行操作的快捷键",
-  "ui_use_pinyin": "使用拼音",
-  "ui_use_pinyin_tips": "搜索时，把中文转换为拼音",
-  "ui_hide_on_lost_focus": "失去焦点时隐藏",
-  "ui_hide_on_lost_focus_tips": "选中后，Wox失去焦点时将隐藏",
-  "ui_hide_on_start": "启动时隐藏",
-  "ui_hide_on_start_tips": "选中后，Wox启动时将隐藏",
-  "ui_show_tray": "显示托盘图标",
-  "ui_show_tray_tips": "选中后，Wox将显示托盘图标",
-  "ui_switch_input_method_abc": "切换输入法",
-  "ui_switch_input_method_abc_tips": "选中后，输入法将切换到英文",
-  "ui_lang": "语言",
-  "ui_query_hotkeys": "查询快捷键",
-  "ui_query_shortcuts": "查询缩写",
-  "ui_general": "通用",
-  "ui_ai": "AI",
-  "ui_autostart": "开机自启动",
-  "ui_autostart_tips": "选中后，Wox将在电脑开机时自动启动",
-  "selection_no_files_selected": "未选择文件",
-  "selection_selected_files_count": "已选择 %d 个文件：",
-  "selection_remaining_files_not_shown": "... 还有 %d 个文件未显示"
+  "plugin_doctor_version": "版本",
+  "plugin_doctor_version_latest": "已经是最新版本：%s",
+  "plugin_doctor_version_update_available": "发现新版本，当前版：%s，最新版本：%s",
+  "plugin_doctor_version_download": "前往下载页面",
+  "plugin_doctor_accessibility": "辅助功能",
+  "plugin_doctor_accessibility_required": "您需要授予 Wox 辅助功能权限才能使用此插件",
+  "plugin_doctor_accessibility_open_settings": "打开辅助功能设置",
+  "plugin_doctor_accessibility_granted": "您已授予 Wox 辅助功能权限",
+  "plugin_query_history_use": "使用",
+  "plugin_url_open": "打开",
+  "plugin_url_remove": "从历史记录中移除",
+  "plugin_url_open_in_browser": "在浏览器中打开",
+  "plugin_browser_open_tab": "打开标签页",
+  "plugin_browser_server_port": "服务器端口",
+  "plugin_browser_server_port_tooltip": "用于与浏览器扩展通信的websocket服务器端口。默认是34988。",
+  "plugin_browser_server_start_error": "启动 websocket 服务器失败: %s",
+  "plugin_menus_execute": "执行",
+  "plugin_wpm_please_wait": "请稍候...",
+  "plugin_wpm_create_plugin": "创建 %s 插件",
+  "plugin_wpm_plugin_name": "名称：%s",
+  "plugin_wpm_create": "创建",
+  "plugin_wpm_uninstall": "卸载",
+  "plugin_wpm_install": "安装",
+  "plugin_wpm_install_failed": "安装插件失败",
+  "plugin_wpm_reload": "重新加载",
+  "plugin_wpm_open_directory": "打开插件目录",
+  "plugin_wpm_open_directory_failed": "打开插件目录失败：%s",
+  "plugin_wpm_remove": "移除",
+  "plugin_wpm_remove_and_delete": "移除并删除插件目录",
+  "plugin_wpm_reload_all_plugins": "重新加载所有开发插件",
+  "plugin_wpm_choose_directory": "您需要选择一个目录来添加本地插件",
+  "plugin_wpm_directory_already_added": "该插件目录已经添加过了",
+  "plugin_wpm_input_directory": "您需要输入一个目录来移除本地插件",
+  "plugin_wpm_directory_not_found": "未找到该插件目录",
+  "plugin_wpm_reload_success": "已重新加载开发插件 %s(%s)",
+  "plugin_wpm_downloading_template": "正在下载模板...",
+  "plugin_wpm_create_temp_dir_failed": "创建临时插件目录失败：%s",
+  "plugin_wpm_downloading_template_to": "正在下载 %s 模板到 %s",
+  "plugin_wpm_download_template_failed": "下载模板失败：%s",
+  "plugin_wpm_extracting_template": "正在解压模板...",
+  "plugin_wpm_extract_template_failed": "解压模板失败：%s",
+  "plugin_wpm_choose_directory_prompt": "请选择一目录...",
+  "plugin_wpm_command_install": "安装 Wox 插件",
+  "plugin_wpm_command_uninstall": "卸载 Wox 插件",
+  "plugin_wpm_command_create": "创建 Wox 插件",
+  "plugin_wpm_command_dev_list": "列出本地 Wox 插件",
+  "plugin_wpm_command_dev_add": "添加现有的 Wox 插件目录",
+  "plugin_wpm_command_dev_remove": "移除本地 Wox 插件，后跟目录",
+  "plugin_wpm_command_dev_reload": "重新加载所有开发插件",
+  "plugin_wpm_local_plugin_directories": "本地插件目录",
+  "plugin_wpm_local_plugin_directories_tooltip": "用于加载本地插件的目录，对插件开发有用",
+  "plugin_wpm_path": "路径",
+  "plugin_ai_command_description": "使用 AI 命令让日常任务更简单",
+  "plugin_ai_command_commands": "命令",
+  "plugin_ai_command_commands_tooltip": "要运行的命令。\r\n例如：`translate`，用户将输入 `ai translate` 来根据提示词运行翻译",
+  "plugin_ai_command_enter_to_start": "按回车开始对话",
+  "plugin_ai_command_run": "运行",
+  "plugin_ai_command_answering": "正在回答...",
+  "plugin_ai_command_answered_cost": "已回答，耗时 %d 毫秒",
+  "plugin_ai_command_copy": "复制",
+  "plugin_ai_command_no_commands": "未找到 AI 命令",
+  "plugin_ai_command_type_to_start": "输入内容开始对话",
+  "plugin_ai_command_not_found": "未找到 AI 命令",
+  "plugin_ai_command_empty_prompt": "该 AI 命令的提示词为空",
+  "plugin_ai_command_chat_with": "与 %s 对话",
+  "plugin_backup_now": "立即备份",
+  "plugin_backup_subtitle": "备份 Wox 设置",
+  "plugin_backup_action": "备份",
+  "plugin_backup_success": "Wox 设置已备份",
+  "plugin_backup_error": "错误",
+  "plugin_backup_restore": "恢复",
+  "plugin_backup_restore_success": "Wox 设置已恢复",
+  "plugin_calculator_copy_result": "复制结果",
+  "plugin_calculator_recalculate": "重新计算",
+  "plugin_calculator_input_expression": "输入表达式进行计算",
+  "plugin_file_open": "打开",
+  "plugin_file_open_containing_folder": "打开所在文件夹"
 }
