--- a/Wox/resource/lang/en_US.json
+++ b/Wox/resource/lang/en_US.json
@@ -137,5 +137,9 @@
   "plugin_calculator_recalculate": "Recalculate",
   "plugin_calculator_input_expression": "Input expression to calculate",
   "plugin_file_open": "Open",
-  "plugin_file_open_containing_folder": "Open containing folder"
+  "plugin_file_open_containing_folder": "Open containing folder",
+  "plugin_manager_query_failed": "%s query failed",
+  "plugin_manager_remove_from_favorite": "Remove from favorite",
+  "plugin_manager_add_to_favorite": "Add to favorite",
+  "plugin_manager_invalid_query_type": "Invalid query type"
 }
