Update language files and UI manager for tray menu localization

--- a/Wox/resource/lang/en_US.json
+++ b/Wox/resource/lang/en_US.json
@@ -24,6 +24,9 @@
   "ui_ai": "AI",
   "ui_autostart": "Autostart",
   "ui_autostart_tips": "When selected, Wox will start automatically when the computer starts",
+  "ui_tray_toggle_app": "Toggle Wox",
+  "ui_tray_open_setting_window": "Settings",
+  "ui_tray_quit": "Quit",
   "plugin_app_open": "Open",
   "plugin_app_open_containing_folder": "Open Containing Folder",
   "plugin_app_copy_path": "Copy Path",
