--- a/Wox/resource/lang/zh_CN.json
+++ b/Wox/resource/lang/zh_CN.json
@@ -24,6 +24,9 @@
   "ui_ai": "AI",
   "ui_autostart": "开机自启动",
   "ui_autostart_tips": "选中后，Wox将在电脑开机时自动启动",
+  "ui_tray_toggle_app": "显示/隐藏Wox",
+  "ui_tray_open_setting_window": "设置",
+  "ui_tray_quit": "退出",
   "plugin_app_open": "打开",
   "plugin_app_open_containing_folder": "打开所在文件夹",
   "plugin_app_copy_path": "复制路径",
