Upgrade go deps

--- a/Wox/resource/lang/en_US.json
+++ b/Wox/resource/lang/en_US.json
@@ -116,6 +116,18 @@
   "plugin_wpm_local_plugin_directories": "Local Plugin Directories",
   "plugin_wpm_local_plugin_directories_tooltip": "The directories to load local plugins, useful for plugin development",
   "plugin_wpm_path": "Path",
+  "plugin_ai_command_name": "Name",
+  "plugin_ai_command_name_tooltip": "The name of the AI command",
+  "plugin_ai_command_command": "Command",
+  "plugin_ai_command_command_tooltip": "The command to trigger this AI command",
+  "plugin_ai_command_model": "Model",
+  "plugin_ai_command_model_tooltip": "The AI model to use for this command",
+  "plugin_ai_command_prompt": "Prompt",
+  "plugin_ai_command_prompt_tooltip": "The prompt template to use. Use %s to represent user input",
+  "plugin_ai_command_vision": "Vision",
+  "plugin_ai_command_vision_tooltip": "Whether this command supports image input",
+  "plugin_ai_command_paste": "Paste to active window",
+  "plugin_ai_command_error": "Error: %s",
   "plugin_ai_command_description": "Make your daily tasks easier with AI commands",
   "plugin_ai_command_commands": "Commands",
   "plugin_ai_command_commands_tooltip": "The commands to run.\r\nE.g. `translate`, user will type `ai translate` to run translate based on the prompt",
