--- a/Wox/resource/lang/zh_CN.json
+++ b/Wox/resource/lang/zh_CN.json
@@ -116,6 +116,18 @@
   "plugin_wpm_local_plugin_directories": "本地插件目录",
   "plugin_wpm_local_plugin_directories_tooltip": "用于加载本地插件的目录，对插件开发有用",
   "plugin_wpm_path": "路径",
+  "plugin_ai_command_name": "名称",
+  "plugin_ai_command_name_tooltip": "AI 命令的名称",
+  "plugin_ai_command_command": "命令",
+  "plugin_ai_command_command_tooltip": "触发此 AI 命令的命令",
+  "plugin_ai_command_model": "模型",
+  "plugin_ai_command_model_tooltip": "此命令使用的 AI 模型",
+  "plugin_ai_command_prompt": "提示词",
+  "plugin_ai_command_prompt_tooltip": "使用的提示词模板。使用 %s 代表用户输入",
+  "plugin_ai_command_vision": "图像",
+  "plugin_ai_command_vision_tooltip": "此命令是否支持图像输入",
+  "plugin_ai_command_paste": "粘贴到活动窗口",
+  "plugin_ai_command_error": "错误：%s",
   "plugin_ai_command_description": "使用 AI 命令让日常任务更简单",
   "plugin_ai_command_commands": "命令",
   "plugin_ai_command_commands_tooltip": "要运行的命令。\r\n例如：`translate`，用户将输入 `ai translate` 来根据提示词运行翻译",
