Complete HTTP proxy implementation across core and UI components
This commit finalizes HTTP proxy support by:
- Adding proxy configuration to AI providers
- Implementing HTTP proxy management in core utility functions
- Updating setting management to handle proxy configuration
- Enhancing Flutter UI with proxy settings view
- Adding localization support for proxy-related text

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -27,6 +27,7 @@
   "ui_tray_toggle_app": "Toggle Wox",
   "ui_tray_open_setting_window": "Settings",
   "ui_tray_quit": "Quit",
+  "ui_proxy_url_tips": "Proxy address, e.g. http://localhost:7890",
   "plugin_app_open": "Open",
   "plugin_app_open_containing_folder": "Open Containing Folder",
   "plugin_app_copy_path": "Copy Path",
