--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -1,32 +1,33 @@
 {
-  "show_wox_preferences": "Mostrar preferências do Wox",
+  "show_wox_preferences": "Mostrar preferï¿½ncias do Wox",
   "selection_no_files_selected": "Nenhum arquivo selecionado",
   "selection_selected_files_count": "%d arquivos selecionados:",
-  "selection_remaining_files_not_shown": "... mais %d arquivos não mostrados",
+  "selection_remaining_files_not_shown": "... mais %d arquivos nï¿½o mostrados",
   "ui_hotkey": "Atalho",
   "ui_hotkey_tips": "Atalhos para abrir ou fechar o Wox",
-  "ui_selection_hotkey": "Atalho de seleção",
-  "ui_selection_hotkey_tips": "Atalhos para executar ações em texto ou arquivos selecionados",
+  "ui_selection_hotkey": "Atalho de seleï¿½ï¿½o",
+  "ui_selection_hotkey_tips": "Atalhos para executar aï¿½ï¿½es em texto ou arquivos selecionados",
   "ui_use_pinyin": "Use Pinyin",
-  "ui_use_pinyin_tips": "Quando selecionado, o Wox vai converter Chinês em Pinyin",
+  "ui_use_pinyin_tips": "Quando selecionado, o Wox vai converter Chinï¿½s em Pinyin",
   "ui_hide_on_lost_focus": "Ocultar na perda do foco",
-  "ui_hide_on_lost_focus_tips": "Quando selecionado, o Wox será ocultado na perda do foco",
+  "ui_hide_on_lost_focus_tips": "Quando selecionado, o Wox serï¿½ ocultado na perda do foco",
   "ui_hide_on_start": "Ocultar ao iniciar",
-  "ui_hide_on_start_tips": "Quando selecionado, o Wox será ocultado ao iniciar",
-  "ui_show_tray": "Mostrar ícone na bandeja",
-  "ui_show_tray_tips": "Quando selecionado, o Wox exibirá um ícone na bandeja",
+  "ui_hide_on_start_tips": "Quando selecionado, o Wox serï¿½ ocultado ao iniciar",
+  "ui_show_tray": "Mostrar ï¿½cone na bandeja",
+  "ui_show_tray_tips": "Quando selecionado, o Wox exibirï¿½ um ï¿½cone na bandeja",
   "ui_switch_input_method_abc": "Alternar para ABC",
-  "ui_switch_input_method_abc_tips": "Quando selecionado, o método de entrada será alterado para o inglês",
+  "ui_switch_input_method_abc_tips": "Quando selecionado, o mï¿½todo de entrada serï¿½ alterado para o inglï¿½s",
   "ui_lang": "Idioma",
   "ui_query_hotkeys": "Teclas de atalho para consulta",
   "ui_query_shortcuts": "Atalhos de consulta",
   "ui_general": "Geral",
   "ui_ai": "IA",
   "ui_autostart": "Iniciar automaticamente",
-  "ui_autostart_tips": "Quando selecionado, o Wox será iniciado automaticamente quando o computador for ligado",
+  "ui_autostart_tips": "Quando selecionado, o Wox ser iniciado automaticamente quando o computador for ligado",
   "ui_tray_toggle_app": "Alternar Wox",
-  "ui_tray_open_setting_window": "Configurações",
+  "ui_tray_open_setting_window": "Configuraes",
   "ui_tray_quit": "Sair",
+  "ui_proxy_url_tips": "Endereo do proxy, por exemplo: http://localhost:7890",
   "plugin_app_open": "Abrir",
   "plugin_app_open_containing_folder": "Abrir pasta contendo",
   "plugin_app_copy_path": "Copiar caminho",
@@ -36,11 +37,11 @@
   "plugin_clipboard_copy_characters": "Copiar caracteres",
   "plugin_clipboard_image_width": "Largura da imagem",
   "plugin_clipboard_image_height": "Altura da imagem",
-  "plugin_clipboard_keep_text_history": "Manter histórico de texto por",
+  "plugin_clipboard_keep_text_history": "Manter histï¿½rico de texto por",
   "plugin_clipboard_days": "dias",
-  "plugin_clipboard_keep_image_history": "Manter histórico de imagens por",
-  "plugin_clipboard_primary_action": "Ação principal",
-  "plugin_clipboard_primary_action_copy_to_clipboard": "Copiar para a área de transferência",
+  "plugin_clipboard_keep_image_history": "Manter histï¿½rico de imagens por",
+  "plugin_clipboard_primary_action": "Aï¿½ï¿½o principal",
+  "plugin_clipboard_primary_action_copy_to_clipboard": "Copiar para a ï¿½rea de transferï¿½ncia",
   "plugin_clipboard_primary_action_paste_to_active_app": "Colar no aplicativo ativo",
   "plugin_indicator_activate": "Ativar",
   "plugin_indicator_activate_plugin": "Ativar o plugin %s",
@@ -48,37 +49,37 @@
   "plugin_sys_lock_computer": "Bloquear PC",
   "plugin_sys_execute": "Executar",
   "plugin_sys_quit_wox": "Sair",
-  "plugin_sys_open_wox_settings": "Abrir configurações do Wox",
-  "plugin_sys_open_system_settings": "Abrir configurações do sistema",
+  "plugin_sys_open_wox_settings": "Abrir configuraï¿½ï¿½es do Wox",
+  "plugin_sys_open_system_settings": "Abrir configuraï¿½ï¿½es do sistema",
   "plugin_sys_performance_cpu_profiling": "Perfil de desempenho da CPU",
   "plugin_sys_delete_image_cache": "Excluir todo o cache de imagem",
-  "plugin_sys_open_plugin_settings": "Abrir configurações do plugin %s",
+  "plugin_sys_open_plugin_settings": "Abrir configuraï¿½ï¿½es do plugin %s",
   "plugin_websearch_trigger_keyword": "Palavra-chave",
-  "plugin_websearch_trigger_keyword_tooltip": "A palavra-chave que você quer usar para disparar a busca",
-  "plugin_websearch_title": "Título",
-  "plugin_websearch_title_tooltip": "O título da busca, use {query} para representar a consulta",
+  "plugin_websearch_trigger_keyword_tooltip": "A palavra-chave que vocï¿½ quer usar para disparar a busca",
+  "plugin_websearch_title": "Tï¿½tulo",
+  "plugin_websearch_title_tooltip": "O tï¿½tulo da busca, use {query} para representar a consulta",
   "plugin_websearch_urls": "URLs",
-  "plugin_websearch_urls_tooltip": "As URLs da busca. Você pode adicionar múltiplos URLs para uma pesquisa. Use {query} para a consulta, {lower_query} para a consulta em minúsculas, {upper_query} para a consulta em maiúsculas",
+  "plugin_websearch_urls_tooltip": "As URLs da busca. Vocï¿½ pode adicionar mï¿½ltiplos URLs para uma pesquisa. Use {query} para a consulta, {lower_query} para a consulta em minï¿½sculas, {upper_query} para a consulta em maiï¿½sculas",
   "plugin_websearch_enabled": "Ativado",
   "plugin_websearch_is_fallback": "Fallback",
-  "plugin_websearch_is_fallback_tooltip": "Se ativado, essa busca será usada se nenhuma outra pesquisa corresponder à consulta",
-  "plugin_websearch_icon": "Ícone",
+  "plugin_websearch_is_fallback_tooltip": "Se ativado, essa busca serï¿½ usada se nenhuma outra pesquisa corresponder ï¿½ consulta",
+  "plugin_websearch_icon": "ï¿½cone",
   "plugin_websearch_web_searches": "Pesquisas na web",
   "plugin_url_open": "Abrir",
-  "plugin_url_remove": "Remover do histórico de URLs",
+  "plugin_url_remove": "Remover do histï¿½rico de URLs",
   "plugin_url_open_in_browser": "Abrir no navegador",
-  "plugin_doctor_version": "Versão",
-  "plugin_doctor_version_latest": "Já está usando a versão mais recente: %s",
-  "plugin_doctor_version_update_available": "Nova versão disponível, atual: %s, mais recente: %s",
-  "plugin_doctor_version_download": "Ir para a página de download",
+  "plugin_doctor_version": "Versï¿½o",
+  "plugin_doctor_version_latest": "Jï¿½ estï¿½ usando a versï¿½o mais recente: %s",
+  "plugin_doctor_version_update_available": "Nova versï¿½o disponï¿½vel, atual: %s, mais recente: %s",
+  "plugin_doctor_version_download": "Ir para a pï¿½gina de download",
   "plugin_doctor_accessibility": "Acessibilidade",
-  "plugin_doctor_accessibility_required": "Você precisa conceder permissão de Acessibilidade ao Wox para usar este plugin",
-  "plugin_doctor_accessibility_open_settings": "Abrir configurações de acessibilidade",
-  "plugin_doctor_accessibility_granted": "Você concedeu permissão de Acessibilidade ao Wox",
+  "plugin_doctor_accessibility_required": "Vocï¿½ precisa conceder permissï¿½o de Acessibilidade ao Wox para usar este plugin",
+  "plugin_doctor_accessibility_open_settings": "Abrir configuraï¿½ï¿½es de acessibilidade",
+  "plugin_doctor_accessibility_granted": "Vocï¿½ concedeu permissï¿½o de Acessibilidade ao Wox",
   "plugin_query_history_use": "Usar",
   "plugin_browser_open_tab": "Abrir",
   "plugin_browser_server_port": "Porta do servidor",
-  "plugin_browser_server_port_tooltip": "A porta para o servidor websocket se comunicar com a extensão do navegador. O padrão é 34988.",
+  "plugin_browser_server_port_tooltip": "A porta para o servidor websocket se comunicar com a extensï¿½o do navegador. O padrï¿½o ï¿½ 34988.",
   "plugin_browser_server_start_error": "Falha ao iniciar o servidor websocket: %s",
   "plugin_menus_execute": "Executar",
   "plugin_wpm_please_wait": "Por favor, aguarde...",
@@ -89,32 +90,32 @@
   "plugin_wpm_install": "Instalar",
   "plugin_wpm_install_failed": "Falha ao instalar o plugin",
   "plugin_wpm_reload": "Recarregar",
-  "plugin_wpm_open_directory": "Abrir diretório do plugin",
-  "plugin_wpm_open_directory_failed": "Falha ao abrir o diretório do plugin: %s",
+  "plugin_wpm_open_directory": "Abrir diretï¿½rio do plugin",
+  "plugin_wpm_open_directory_failed": "Falha ao abrir o diretï¿½rio do plugin: %s",
   "plugin_wpm_remove": "Remover",
-  "plugin_wpm_remove_and_delete": "Remover e deletar diretório do plugin",
+  "plugin_wpm_remove_and_delete": "Remover e deletar diretï¿½rio do plugin",
   "plugin_wpm_reload_all_plugins": "Recarregar todos os plugins de desenvolvimento",
-  "plugin_wpm_choose_directory": "Você precisa escolher um diretório para adicionar o plugin local",
-  "plugin_wpm_directory_already_added": "O diretório do plugin já foi adicionado",
-  "plugin_wpm_input_directory": "Você precisa informar um diretório para remover o plugin local",
-  "plugin_wpm_directory_not_found": "Diretório do plugin não encontrado",
+  "plugin_wpm_choose_directory": "Vocï¿½ precisa escolher um diretï¿½rio para adicionar o plugin local",
+  "plugin_wpm_directory_already_added": "O diretï¿½rio do plugin jï¿½ foi adicionado",
+  "plugin_wpm_input_directory": "Vocï¿½ precisa informar um diretï¿½rio para remover o plugin local",
+  "plugin_wpm_directory_not_found": "Diretï¿½rio do plugin nï¿½o encontrado",
   "plugin_wpm_reload_success": "Plugin de desenvolvimento %s(%s) recarregado",
   "plugin_wpm_downloading_template": "Baixando template...",
-  "plugin_wpm_create_temp_dir_failed": "Falha ao criar diretório temporário do plugin: %s",
+  "plugin_wpm_create_temp_dir_failed": "Falha ao criar diretï¿½rio temporï¿½rio do plugin: %s",
   "plugin_wpm_downloading_template_to": "Baixando template %s para %s",
   "plugin_wpm_download_template_failed": "Falha ao baixar o template: %s",
   "plugin_wpm_extracting_template": "Extraindo template...",
   "plugin_wpm_extract_template_failed": "Falha ao extrair o template: %s",
-  "plugin_wpm_choose_directory_prompt": "Por favor, escolha um diretório...",
+  "plugin_wpm_choose_directory_prompt": "Por favor, escolha um diretï¿½rio...",
   "plugin_wpm_command_install": "Instalar plugins do Wox",
   "plugin_wpm_command_uninstall": "Desinstalar plugins do Wox",
   "plugin_wpm_command_create": "Criar plugin do Wox",
   "plugin_wpm_command_dev_list": "Listar plugins locais do Wox",
-  "plugin_wpm_command_dev_add": "Adicionar diretório de plugin existente do Wox",
-  "plugin_wpm_command_dev_remove": "Remover plugin local do Wox, seguido de um diretório",
+  "plugin_wpm_command_dev_add": "Adicionar diretï¿½rio de plugin existente do Wox",
+  "plugin_wpm_command_dev_remove": "Remover plugin local do Wox, seguido de um diretï¿½rio",
   "plugin_wpm_command_dev_reload": "Recarregar todos os plugins de desenvolvimento",
-  "plugin_wpm_local_plugin_directories": "Diretórios de Plugins Locais",
-  "plugin_wpm_local_plugin_directories_tooltip": "Os diretórios para carregar plugins locais, útil para desenvolvimento de plugins",
+  "plugin_wpm_local_plugin_directories": "Diretï¿½rios de Plugins Locais",
+  "plugin_wpm_local_plugin_directories_tooltip": "Os diretï¿½rios para carregar plugins locais, ï¿½til para desenvolvimento de plugins",
   "plugin_wpm_path": "Caminho",
   "plugin_ai_command_name": "Nome",
   "plugin_ai_command_name_tooltip": "O nome do comando de IA",
@@ -123,14 +124,14 @@
   "plugin_ai_command_model": "Modelo",
   "plugin_ai_command_model_tooltip": "O modelo de IA a ser usado para este comando",
   "plugin_ai_command_prompt": "Prompt",
-  "plugin_ai_command_prompt_tooltip": "O template de prompt a ser usado. Use %s para representar a entrada do usuário",
-  "plugin_ai_command_vision": "Visão",
+  "plugin_ai_command_prompt_tooltip": "O template de prompt a ser usado. Use %s para representar a entrada do usuï¿½rio",
+  "plugin_ai_command_vision": "Visï¿½o",
   "plugin_ai_command_vision_tooltip": "Se este comando suporta entrada de imagem",
   "plugin_ai_command_paste": "Colar na janela ativa",
   "plugin_ai_command_error": "Erro: %s",
-  "plugin_ai_command_description": "Facilite suas tarefas diárias com comandos de IA",
+  "plugin_ai_command_description": "Facilite suas tarefas diï¿½rias com comandos de IA",
   "plugin_ai_command_commands": "Comandos",
-  "plugin_ai_command_commands_tooltip": "Os comandos a serem executados.\r\nExemplo: `traduzir`, o usuário digitara `ai translate` para executar a tradução com base no prompt",
+  "plugin_ai_command_commands_tooltip": "Os comandos a serem executados.\r\nExemplo: `traduzir`, o usuï¿½rio digitara `ai translate` para executar a traduï¿½ï¿½o com base no prompt",
   "plugin_ai_command_enter_to_start": "Pressione Enter para iniciar o chat",
   "plugin_ai_command_run": "Executar",
   "plugin_ai_command_answering": "Respondendo...",
@@ -142,19 +143,19 @@
   "plugin_ai_command_empty_prompt": "Prompt vazio para este comando de IA",
   "plugin_ai_command_chat_with": "Conversar com %s",
   "plugin_backup_now": "Fazer backup agora",
-  "plugin_backup_subtitle": "Backup das configurações do Wox",
+  "plugin_backup_subtitle": "Backup das configuraï¿½ï¿½es do Wox",
   "plugin_backup_action": "Fazer backup",
-  "plugin_backup_success": "Configurações do Wox salvas com sucesso",
+  "plugin_backup_success": "Configuraï¿½ï¿½es do Wox salvas com sucesso",
   "plugin_backup_error": "Erro",
   "plugin_backup_restore": "Restaurar",
-  "plugin_backup_restore_success": "Configurações do Wox restauradas",
+  "plugin_backup_restore_success": "Configuraï¿½ï¿½es do Wox restauradas",
   "plugin_calculator_copy_result": "Copiar resultado",
   "plugin_calculator_recalculate": "Recalcular",
-  "plugin_calculator_input_expression": "Digite a expressão para calcular",
+  "plugin_calculator_input_expression": "Digite a expressï¿½o para calcular",
   "plugin_file_open": "Abrir",
   "plugin_file_open_containing_folder": "Abrir pasta contendo",
   "plugin_manager_query_failed": "Consulta %s falhou",
   "plugin_manager_remove_from_favorite": "Remover dos favoritos",
   "plugin_manager_add_to_favorite": "Adicionar aos favoritos",
-  "plugin_manager_invalid_query_type": "Tipo de consulta inválido"
+  "plugin_manager_invalid_query_type": "Tipo de consulta invï¿½lido"
 }
