Enhance localization and UI for settings with multilingual support
This commit adds comprehensive localization for settings views, including:
- Adding new translation keys for network, plugins, themes, and general settings
- Updating setting view titles and labels to use localized text
- Improving plugin table update view with validation and tooltip support
- Adjusting setting controller to support new localization structure

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -27,7 +27,17 @@
   "ui_tray_toggle_app": "Toggle Wox",
   "ui_tray_open_setting_window": "Settings",
   "ui_tray_quit": "Quit",
+  "ui_proxy_enabled": "Enable Proxy",
+  "ui_proxy_url": "Proxy URL",
   "ui_proxy_url_tips": "Proxy address, e.g. http://localhost:7890",
+  "ui_network": "Network",
+  "ui_plugins": "Plugins",
+  "ui_store_plugins": "Store Plugins",
+  "ui_installed_plugins": "Installed Plugins",
+  "ui_themes": "Themes",
+  "ui_store_themes": "Store Themes",
+  "ui_installed_themes": "Installed Themes",
+  "ui_back": "Back",
   "plugin_app_open": "Open",
   "plugin_app_open_containing_folder": "Open Containing Folder",
   "plugin_app_copy_path": "Copy Path",
