--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -27,7 +27,17 @@
   "ui_tray_toggle_app": "Alternar Wox",
   "ui_tray_open_setting_window": "Configuraes",
   "ui_tray_quit": "Sair",
+  "ui_proxy_enabled": "Habilitar Proxy",
+  "ui_proxy_url": "URL do Proxy",
   "ui_proxy_url_tips": "Endereo do proxy, por exemplo: http://localhost:7890",
+  "ui_network": "Rede",
+  "ui_plugins": "Plugins",
+  "ui_store_plugins": "Plugins da loja",
+  "ui_installed_plugins": "Plugins instalados",
+  "ui_themes": "Temas",
+  "ui_store_themes": "Temas da loja",
+  "ui_installed_themes": "Temas instalados",
+  "ui_back": "Voltar",
   "plugin_app_open": "Abrir",
   "plugin_app_open_containing_folder": "Abrir pasta contendo",
   "plugin_app_copy_path": "Copiar caminho",
