--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -27,7 +27,17 @@
   "ui_tray_toggle_app": "Переключить Wox",
   "ui_tray_open_setting_window": "Настройки",
   "ui_tray_quit": "Выйти",
+  "ui_proxy_enabled": "Включить прокси",
+  "ui_proxy_url": "URL прокси",
   "ui_proxy_url_tips": "Адрес прокси, например: http://localhost:7890",
+  "ui_network": "Сеть",
+  "ui_plugins": "Плагины",
+  "ui_store_plugins": "Плагины магазина",
+  "ui_installed_plugins": "Установленные плагины",
+  "ui_themes": "Темы",
+  "ui_store_themes": "Темы магазина",
+  "ui_installed_themes": "Установленные темы",
+  "ui_back": "Назад",
   "plugin_app_open": "Открыть",
   "plugin_app_open_containing_folder": "Открыть содержащую папку",
   "plugin_app_copy_path": "Копировать путь",
