--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -27,7 +27,17 @@
   "ui_tray_toggle_app": "显示/隐藏Wox",
   "ui_tray_open_setting_window": "设置",
   "ui_tray_quit": "退出",
+  "ui_proxy_enabled": "启用代理",
+  "ui_proxy_url": "代理地址",
   "ui_proxy_url_tips": "代理地址，例如：http://localhost:7890",
+  "ui_network": "网络",
+  "ui_plugins": "插件",
+  "ui_store_plugins": "插件商店",
+  "ui_installed_plugins": "已安装插件",
+  "ui_themes": "主题",
+  "ui_store_themes": "主题商店",
+  "ui_installed_themes": "已安装主题",
+  "ui_back": "返回",
   "plugin_app_open": "打开",
   "plugin_app_open_containing_folder": "打开所在文件夹",
   "plugin_app_copy_path": "复制路径",
