Add localization support for query hotkeys settings

--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -38,6 +38,14 @@
   "ui_store_themes": "Temas da loja",
   "ui_installed_themes": "Temas instalados",
   "ui_back": "Voltar",
+  "ui_operation": "Operao",
+  "ui_query_hotkeys_hotkey": "Tecla de atalho",
+  "ui_query_hotkeys_hotkey_tooltip": "A tecla de atalho para disparar a consulta.",
+  "ui_query_hotkeys_query": "Consulta",
+  "ui_query_hotkeys_query_tooltip": "A consulta quando a tecla de atalho acionada. As seguintes variveis so suportadas:\n\n{wox:selected_text} representa o texto selecionado.\n{wox:active_browser_url} representa o URL da guia do navegador ativo.",
+  "ui_query_hotkeys_silent": "Silencioso",
+  "ui_query_hotkeys_silent_tooltip": "Quando selecionado, se o nmero de resultados da consulta for 1, o Wox executar a consulta diretamente sem mostrar a lista de resultados.\n\nIssotil quando voc tem uma consulta que sempre retorna um resultado e deseja execut-la diretamente.\nNota: Esta opo s est disponvel quando o nmero de resultados da consulta 1. Caso contrrio, ser ignorado e notificar um aviso.",
+  "ui_add": "Adicionar",
   "plugin_app_open": "Abrir",
   "plugin_app_open_containing_folder": "Abrir pasta contendo",
   "plugin_app_copy_path": "Copiar caminho",
