--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -38,6 +38,14 @@
   "ui_store_themes": "Store Themes",
   "ui_installed_themes": "Installed Themes",
   "ui_back": "Back",
+  "ui_operation": "Operation",
+  "ui_query_hotkeys_hotkey": "Hotkey",
+  "ui_query_hotkeys_hotkey_tooltip": "The hotkey to trigger the query.",
+  "ui_query_hotkeys_query": "Query",
+  "ui_query_hotkeys_query_tooltip": "The query when the hotkey is triggered. Following variables are supported:\n\n{wox:selected_text} represent the selected text.\n{wox:active_browser_url} represent the url of active browser tab.",
+  "ui_query_hotkeys_silent": "Silent",
+  "ui_query_hotkeys_silent_tooltip": "When selected, if the count of query result is 1, Wox will execute the query directly without showing the result list.\n\nThis is useful when you have a query that always return one result and you want to execute it directly.\nNote: This option is only available when the query result count is 1. Otherwise it will be ignored and notify a warning.",
+  "ui_add": "Add",
   "plugin_app_open": "Open",
   "plugin_app_open_containing_folder": "Open Containing Folder",
   "plugin_app_copy_path": "Copy Path",
