--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -38,6 +38,14 @@
   "ui_store_themes": "Темы магазина",
   "ui_installed_themes": "Установленные темы",
   "ui_back": "Назад",
+  "ui_operation": "Операция",
+  "ui_query_hotkeys_hotkey": "Горячая клавиша",
+  "ui_query_hotkeys_hotkey_tooltip": "Горячая клавиша для запроса",
+  "ui_query_hotkeys_query": "Запрос",
+  "ui_query_hotkeys_query_tooltip": "Запрос при нажатии горячей клавиши",
+  "ui_query_hotkeys_silent": "Сильный",
+  "ui_query_hotkeys_silent_tooltip": "Если выбран, и количество результатов запроса равно 1, Wox выполнит запрос непосредственно без отображения списка результатов.\n\nЭто полезно, когда у вас есть запрос, который всегда возвращает один результат, и вы хотите выполнить его непосредственно.\nПримечание: Эта опция доступна только в том случае, если количество результатов запроса равно 1. В противном случае она будет проигнорирована и будет выведено предупреждение.",
+  "ui_add": "Добавить",
   "plugin_app_open": "Открыть",
   "plugin_app_open_containing_folder": "Открыть содержащую папку",
   "plugin_app_copy_path": "Копировать путь",
