--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -38,6 +38,14 @@
   "ui_store_themes": "主题商店",
   "ui_installed_themes": "已安装主题",
   "ui_back": "返回",
+  "ui_operation": "操作",
+  "ui_query_hotkeys_hotkey": "快捷键",
+  "ui_query_hotkeys_hotkey_tooltip": "用于触发查询的快捷键",
+  "ui_query_hotkeys_query": "查询",
+  "ui_query_hotkeys_query_tooltip": "当快捷键被触发时，查询的内容。支持以下变量：\n\n{wox:selected_text} 代表选中的文本\n{wox:active_browser_url} 代表活动的浏览器标签页的URL",
+  "ui_query_hotkeys_silent": "静默",
+  "ui_query_hotkeys_silent_tooltip": "当选中时，如果查询结果数量为1，Wox将直接执行查询而不显示结果列表。\n\n这在您有一个总是返回一个结果的查询并且您希望直接执行它时非常有用。\n注意：此选项仅在查询结果数量为1时可用。否则将忽略并通知警告。",
+  "ui_add": "添加",
   "plugin_app_open": "打开",
   "plugin_app_open_containing_folder": "打开所在文件夹",
   "plugin_app_copy_path": "复制路径",
